GCW-793 comment# fixed icons spacing issue on ipad-mini

--- a/app/styles/templates/_notification_link.scss
+++ b/app/styles/templates/_notification_link.scss
@@ -27,6 +27,11 @@
 
 .right-small {
   margin-right: 4%;
+
+  @media #{$medium-only} {
+    margin-right: 6.5%;
+  }
+
   @media #{$small-only} {
     margin-right: 10%;
   }
